without reset button

--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 body {
   background: rgba(3, 101, 100, .9);
   font-family: sans-serif;
-  color: rgba(232, 221, 203, 1);
+  color: rgba(232,221,203, 1);
   font-family: "Kurale", sans-serif;
 }
 
@@ -10,7 +10,7 @@ main, #rest, #work, header, #restControls, #workControls, #clock {
 }
 
 main {
-  grid-template-columns: 1fr 100px 1fr;
+  grid-template-columns: repeat(2, 1fr);
   grid-template-rows: 150px 100px 350px;
   width: 700px;
   height: 700px;
@@ -25,15 +25,15 @@ h1 {
   margin-top: 11%;
   background: #000;
   color: transparent;
-  text-shadow: 0px 2px 3px rgba(255, 255, 255, .7);
+  text-shadow: 0px 2px 3px rgba(255,255,255, .7);
   -webkit-background-clip: text;
-  -moz-background-clip: text;
-  background-clip: text;
+    -moz-background-clip: text;
+         background-clip: text;
 }
 
 header {
   justify-content: center;
-  grid-column: 1 / span 3;
+  grid-column: 1 / span 2;
   grid-row: 1;
 }
 
@@ -43,34 +43,8 @@ header {
   grid-row: 2;
 }
 
-#reset {
-  font-family: "Inconsolata", monospace;
-  font-size: 2rem;
-  font-weight: bold;
-  color: rgba(3, 101, 100, .9);
-  grid-column: 2;
-  grid-row: 2;
-  border-radius: 50%;
-  border: transparent;
-  background-color: rgba(205, 179, 128, .7);
-  box-shadow: 1px 1px 2px 1px rgba(3, 54, 73, 0.9) inset, 1px 1px 4px 1px rgba(3, 54, 73, 0.6);
-  transition: all .1s ease-in-out;
-}
-
-#reset:hover {
-  background-color: rgba(205, 179, 128, 1);
-}
-
-#reset:active {
-  transform: scale(.9);
-}
-
-#reset:focus {
-  outline: 0;
-}
-
 #work {
-  grid-column: 3;
+  grid-column: 2;
   justify-content: center;
   grid-row: 2;
 }
@@ -82,6 +56,7 @@ header {
   margin: 0;
   padding: 0;
   font-size: 1.3rem;
+
 }
 
 span {
@@ -89,6 +64,7 @@ span {
 }
 
 .c {
+  font-weight: bold;
   font-size: 1.5rem;
 }
 
@@ -97,40 +73,39 @@ span {
 }
 
 #clock {
-  grid-column: 1 / span 3;
+  grid-column: 1 / span 2;
   transform: rotate(-90deg);
-  border-radius: 50%;
+	border-radius: 50%;
   justify-self: center;
   align-self: center;
   box-shadow: 1px 1px 4px 1px rgba(0, 0, 0, 0.6) inset, 1px 1px 5px 1px rgba(0, 0, 0, 0.6);
 }
 
+
 .minutes {
   fill: transparent;
-  stroke: rgba(232, 221, 203, 0.7);
+  stroke: rgba(232,221,203, 0.7);
   stroke-width: 60;
-  stroke-dasharray: 0 942;
-  /*2 + PI + 150(radius) = 942*/
-  filter: url(#shadow);
-  animation-name: fillup;
+  stroke-dasharray: 0 942; /*2 + PI + 150(radius) = 942*/
+  filter:url(#shadow);
   animation-duration: 60s;
-  animation-timing-function: linear;
-  /*animation-delay: 0s;*/
-  animation-direction: linear;
-  animation-iteration-count: infinite;
-  animation-fill-mode: backwards;
-  animation-play-state: paused;
+  /*animation-name: fillup;*/
+
 }
 
 .workRestTime {
   fill: transparent;
-  stroke: rgba(205, 179, 128, .8);
+  stroke: rgba(205,179,128, .8);
   stroke-width: 300;
-  stroke-dasharray: 0 942;
-  /*2 + PI + 150(radius) = 942*/
-  filter: url(#shadow);
-  animation-name: fillup;
+  stroke-dasharray: 0 942; /*2 + PI + 150(radius) = 942*/
+  filter:url(#shadow);
   animation-duration: 60s;
+
+}
+
+.runAnimation {
+  animation-name: fillup;
+
   animation-timing-function: linear;
   /*animation-delay: 0s;*/
   animation-direction: linear;
@@ -142,23 +117,21 @@ span {
 .inside {
   fill: rgb(0, 180, 0);
   fill-opacity: 0.4;
-  filter: url(#shadow);
+  filter:url(#shadow);
+
 }
 
 .red {
   fill: rgb(180, 0, 0);
 }
 
-.running {
+.paused {
   -webkit-animation-play-state: running;
   animation-play-state: running;
 }
 
 @keyframes fillup {
-  to {
-    stroke-dasharray: 942 942
-  }
-  ;
+	to {stroke-dasharray: 942 942};
 }
 
 text {
